# CReactorCore

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  lambda_mono_subscriber.h  map_subscriber.h  mono.h  mono_create.h  mono_map.h  mono_operator.h  mono_sink.h  mono_subscribe_on.h  operators.h  optimizable_operator.h  publisher.h  reactor_core_global.h  subscriber.h
test/: App.h  CMakeLists.txt  main.cpp
